--- a/categories.html
+++ b/categories.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/categories.css">
 	<link rel="stylesheet" href="css/all.css">
@@ -196,7 +197,9 @@
 					
 				<!-- Danh Sách Chuyên Mục Loại tin -->
 				<div class="list-categories">
-
+					<div class="list-categories__title">
+						<i class="fas fa-bars"></i> <a href="">Home</a> <span>/</span> <a href="">Tin chuyên mục</a>
+					</div>
 					<div class="list-categories__box">
 						<a href=""><img src="http://tgu.edu.vn/images/news/5bd65f1a95455.jpg" alt=""></a>
 						<div class="information">
