--- a/categories.html
+++ b/categories.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/categories.css">
 	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/datepicker.css">
 	<script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 	<div id="fb-root"></div>
 </head>
@@ -113,6 +114,15 @@
 
 		<main class="main">
 			<div class="left">
+				<div class="left-calendar">
+					<div class="title">Tìm kiếm bài viết theo ngày</div>
+					<form action="">
+						<input type="text" placeholder="Chọn ngày...." class="datepicker"/>
+						<button>Tìm kiếm</button>
+						<div class="down"><i class="fas fa-caret-down"></i></div>
+					</form>
+				</div> <!-- Calendar -->
+
 				<div class="left-menu">
 					<div class="danhmuc">Danh Mục <i class="fas fa-angle-down"></i></div>
 					<ul>
@@ -437,3 +447,4 @@
 
 </html>
 <script src='js/style.js'></script>
+<script src='js/datepicker.js'></script>
