--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/calendar.css">
 	<script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 	<div id="fb-root"></div>
 </head>
@@ -470,6 +471,7 @@
 						của Đại Học Huế số 398/QĐ-ĐHH-TCNS ngày 10 tháng 12 năm 1999 mà tiền thân là Bộ môn Tin học được thành lập theo
 						quyết định số 09/QĐ-TC ngày 8 tháng 3 năm 1996 của Ban Giám hiệu trường ĐHSP Huế.</p>
 				</div> <!-- Giới thiệu trường học . RIGHT -->
+
 			</div> <!-- END RIGHT -->
 
 		</main> <!-- END MAIN -->
@@ -503,3 +505,5 @@
 
 </html>
 <script src='js/style.js'></script>
+<script src="js/calendar.js"></script>
+<script src="js/index.js"></script>
